# camera_bbb

./: CMakeLists.txt  Makefile  app.cpp  audio  audio.cpp  main.cpp  out.aac  settings.gradle.kts  setup.sh  stream.cpp  test.aac  test.cpp
ap_mode/: config_ap_mode  hostapd.conf
app/: build.gradle.kts
app/src/androidTest/java/com/bdhien/camerastreamapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/bdhien/camerastreamapp/: MainActivity.java
app/src/main/java/com/bdhien/camerastreamapp/ui/gallery/: GalleryFragment.java  GalleryViewModel.java
app/src/main/java/com/bdhien/camerastreamapp/ui/home/: HomeFragment.java  HomeViewModel.java
app/src/main/java/com/bdhien/camerastreamapp/ui/slideshow/: SlideshowFragment.java  SlideshowViewModel.java
app/src/main/res/layout/: app_bar_main.xml  fragment_slideshow.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/bdhien/camerastreamapp/: ExampleUnitTest.java
cpp/: p2p.cpp  p2p.h  p2p_jni.cpp
gradle/wrapper/: gradle-wrapper.properties
jni/: Event.java  EventQueue.cpp  EventQueue.h  Transport.java  native_p2p.cpp
p2p/: CMakeLists.txt
p2p/cmake/Hunter/: config.cmake
proto/: gen.sh  typedef.pb.cc  typedef.pb.h  typedef.proto
stream/: baseStream.cpp  baseStream.h
stream/camera/: cameraStream.cpp  cameraStream.h
stream/live/: liveStream.cpp  liveStream.h
stream/record/: recordStream.h  reocordStream.cpp
transport/mqtt/: CMakeLists.txt  main.cpp  mqtt.cpp  mqtt.h
transport/p2p/: answerer.cpp  offerer.cpp  p2p.cpp  p2p.h
